name:              nb
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

executable         nb
    hs-source-dirs: .

    main-is:           main.hs

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                DeriveGeneric
                

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4.5      && <= 1.6.0.2
                 , yesod-static                  >= 1.5    && <= 1.6.0.1
                 , yesod-form                    >= 1.4.16      && <= 1.6.7
                 , persistent                    >= 2.2.4.1    && <= 2.11
                 , text
                 , persistent-postgresql
                 , monad-logger
                 , time                         >= 1.5.0.1
                 , aeson                        >= 0.11.2.0
                 , http-types
                 , persistent-mysql
                